--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="PleaseInput">请输入</string>
     <string name="ToPublish">确认发布</string>
     <string name="FeedBackDes">意见描述...</string>
-    <string name="ben">资芽网——专注于不良资产领域综合服务的互联网平台\n【海量不良资产信息】\n资芽网自2016年成立以来，平台已汇聚各类型不良资产金额达4190亿元。用户通过APP端“找信息”搜索框，搜索相关关键词，即可无缝连接PC端大数据搜索引擎，获取所需项目信息。\n【各类不良资产处置服务方】\n目前，资芽网已入驻400多家不良资产投资机构，整合1000余家各类处置服务方，与数十家银行、AMC、金融资产交易所建立合作关系。用户通过APP端“找服务”搜索框，搜索相关关键词，即可无缝连接PC端大数据搜索引擎，获取所需服务方信息，随时约谈业务。\n【资源整合，项目对接】\n资芽网引领行业专家，探索不良资产证券化、债转股等方式，推动处置创新；以线下项目对接会为基础，为AMC、银行精准匹配不良资产投资机构和产业资本；发起“非标资产国际投资联盟”，进一步整合国内外优质资方。\n\n如有任何建议或意见，请联系我们：4008988557\n网站：http://www.ziyawang.com\n微信公众号：ziya-wang
+    <string name="ben">\t\t\t\t资芽早报——资芽网旗下自媒体，每天早上为您发布最新鲜的一手项目资讯。\n\t\t\t\t资芽网——资芽（北京）网络科技有限公司是一家专注于不良资产领域综合服务的互联网平台，主要为AMC、银行、资方及不良资产产业链上下游服务商提供信息撮合和综合服务。\n\t\t\t\t自2016年成立以来，平台已汇聚各类型不良资产上万亿，入驻600多家不良资产投资机构、1000余家各类处置服务方，与数十家银行、AMC、金融资产交易所建立合作关系，通过线上线下相结合的方式为上下游企业提供多样化服务。
     </string>
 
 </resources>
