--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,7 +61,7 @@
     <string name="PleaseInput">请输入</string>
     <string name="ToPublish">确认发布</string>
     <string name="FeedBackDes">意见描述...</string>
-    <string name="ben">\n\t\t\t\t资芽早报——资芽网旗下自媒体，每天早上为您发布最新鲜的一手项目资讯。\n\t\t\t\t资芽网——资芽（北京）网络科技有限公司是一家专注于不良资产领域综合服务的互联网平台，主要为AMC、银行、资方及不良资产产业链上下游服务商提供信息撮合和综合服务。\n\t\t\t\t自2016年成立以来，平台已汇聚各类型不良资产上万亿，入驻600多家不良资产投资机构、1000余家各类处置服务方，与数十家银行、AMC、金融资产交易所建立合作关系，通过线上线下相结合的方式为上下游企业提供多样化服务。
+    <string name="ben">\t\t\t\t资芽早报——资芽网旗下自媒体，每天早上为您发布最新鲜的一手项目资讯。\n\t\t\t\t资芽网——资芽（北京）网络科技有限公司是一家专注于不良资产领域综合服务的互联网平台，主要为AMC、银行、资方及不良资产产业链上下游服务商提供信息撮合和综合服务。\n\t\t\t\t自2016年成立以来，平台已汇聚各类型不良资产上万亿，入驻600多家不良资产投资机构、1000余家各类处置服务方，与数十家银行、AMC、金融资产交易所建立合作关系，通过线上线下相结合的方式为上下游企业提供多样化服务。
     </string>
 
 </resources>
