--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="me_infoNotice">消息通知</string>
     <string name="me_MyPublish">我的发布</string>
     <string name="me_MyMessage">我的留言</string>
+    <string name="me_gold_add">芽币充值</string>
     <string name="me_FeedBack">意见反馈</string>
     <string name="me_SysSetting">系统设置</string>
     <string name="me_AboutUs">关于我们</string>
